feat: handle dashboard oidc sessions
